@@ -2,12 +2,12 @@ Package: patientProfilesVis
 Type: Package
 Title: Visualization Of Patient Profiles
 Version: 0.0.12
-Date: 2018-10-22
+Date: 2018-10-25
 Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: Creation of report with customizable visualization of patient profiles.
 Imports: ggplot2, plyr, cowplot, tools, reshape2, knitr, glpgStyle, grid, dplyr, stringr, glpgUtilityFct
-Suggests: pander, shiny, vdiffr
+Suggests: pander, shiny, vdiffr, testthat
 License: file LICENSE
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
